# nautilus

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  design-v2.md  design.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml  docs.yml  pypi-publish.yml
benchmarks/: Dockerfile.bench  README.md  __init__.py  conftest.py  locustfile.py  report.py  requirements-bench.txt
design-docs/: 01-overview.md  02-core-engine.md  03-living-brain.md  04-architecture-operations.md  05-ecosystem-roadmap.md  README.md
docs/: CNAME  _index.md  getting-started.md
docs/concepts/: architecture.md  index.md
docs/how-to/: index.md
docs/reference/: adapter-sdk.md  cli.md  index.md  python-sdk.md  rest-api.md  rule-packs.md
docs/sdk/: mkdocs.yml
docs/sdk/docs/: discovery.md  index.md  tutorial.md
examples/custom-adapter/: README.md  csv_adapter.py  sample.csv  test_compliance.py
examples/full-showcase/: .env.example  Dockerfile  README.md  demo.sh  docker-compose.full.yml  docker-compose.yml  nautilus.full.yaml  nautilus.yaml  prometheus.yml  tempo.yaml
examples/full-showcase/seed/: demo-queries.py  init.sql  seed.py
examples/quickstart/: README.md  nautilus.yaml
nautilus/: __init__.py  __main__.py  cli.py
nautilus/adapters/: __init__.py  base.py  elasticsearch.py  embedder.py  influxdb.py  neo4j.py  pgvector.py  postgres.py  rest.py  s3.py  servicenow.py
nautilus/analysis/: __init__.py  base.py  fallback.py  pattern_matching.py
nautilus/analysis/llm/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py
nautilus/audit/: __init__.py  logger.py
nautilus/config/: __init__.py  agent_registry.py  escalation.py  loader.py  models.py  registry.py
nautilus/core/: __init__.py  attestation_payload.py  attestation_sink.py  broker.py  clips_encoding.py  fathom_router.py  models.py  session.py  session_pg.py  temporal.py
nautilus/forensics/: __init__.py  handoff_worker.py  offsets.py  sinks.py
nautilus/observability/: __init__.py  _noop.py  instrumentation.py  metrics.py  spans.py
nautilus/rules/: __init__.py
nautilus/rules/escalation/: default.yaml
nautilus/rules/forensics/: handoff.yaml  nautilus-forensics.yaml
nautilus/rules/functions/: __init__.py  classification_scope.yaml  contains_all.py  nautilus_routing_rules.yaml  overlaps.py
nautilus/rules/hierarchies/: classification.yaml  cui-sub.yaml
nautilus/rules/modules/: nautilus-routing.yaml
nautilus/rules/rules/: classification.yaml  denial.yaml  handoff.yaml  routing.yaml  temporal.yaml
nautilus/rules/templates/: nautilus.yaml
nautilus/synthesis/: __init__.py  base.py  basic.py
nautilus/transport/: __init__.py  auth.py  fastapi_app.py  mcp_server.py
nautilus/ui/: __init__.py  audit_reader.py  dependencies.py  router.py  sse.py
nautilus/ui/static/: htmx-ext-sse.min.js  htmx.min.js  styles.css
nautilus/ui/templates/: base.html
observability/: docker-compose.otel.yml  otel-collector-config.yml  prometheus.yml
observability/grafana/dashboards/: overview.json
observability/grafana/provisioning/: dashboards.yml  datasources.yml
rule-packs/data-routing-hipaa/: README.md  pack.yaml
rule-packs/data-routing-hipaa/hierarchies/: phi-level.yaml
rule-packs/data-routing-hipaa/modules/: hipaa-routing.yaml
rule-packs/data-routing-hipaa/rules/: breach-detection.yaml  minimum-necessary.yaml  phi-access-control.yaml  phi-hierarchy.yaml  role-restrictions.yaml
rule-packs/data-routing-hipaa/templates/: phi_classification.yaml
rule-packs/data-routing-nist/: README.md  pack.yaml
rule-packs/data-routing-nist/hierarchies/: cui-sub-extended.yaml
scripts/: check_version_sync.py
specs/_epics/design-mk2/: epic.md  (+1 more)
specs/core-broker/: .progress.md  design.md  requirements.md  research.md  tasks.md
specs/operator-platform/: .progress-task-13.md  .progress-task-14.md  .progress-task-18.md  .progress-task-19.md  .progress-task-2-1.md  .progress-task-2-2.md  .progress-task-28.md  .progress-task-29.md  .progress-task-3-1.md  .progress-task-3-10.md  .progress-task-3-2.md  .progress-task-3-4.md  .progress-task-3-5.md  .progress-task-3-6.md  .progress-task-3-9.md  .progress-task-33.md  .progress-task-34.md  .progress-task-35.md  .progress-task-36.md  .progress-task-37.md  .progress-task-42.md  .progress-task-43.md  .progress-task-44.md  .progress-task-48.md  .progress-task-49.md  .progress-task-5.md  .progress-task-51.md  .progress-task-52.md  .progress-task-53.md  .progress-task-54.md  .progress-task-56.md  .progress-task-57.md  .progress-task-58.md  .progress-task-6.md  .progress-task-61.md  .progress-task-62.md  .progress-task-63.md  .progress-task-65.md  .progress-task-66.md  .progress-task-68.md  (+7 more)
specs/reasoning-engine/: .ralph-state.json  brief.md  design.md  requirements.md  research.md  tasks.md
templates/adapter/: copier.yml
tests/: conftest.py  test_sdk_drift.py
tests/fixtures/: nautilus.yaml  seed.sql  ve-config.yaml
tests/integration/: test_admin_auth.py  test_admin_flow.py  test_attestation_sink_fault_injection.py  test_backwards_compat.py  test_classification_e2e.py  test_docker_image.py  test_elasticsearch_e2e.py  test_fastapi_latency_harness.py  test_fathom_smoke.py  test_forensic_worker_e2e.py  test_llm_determinism_harness.py  test_mcp_e2e.py  test_mvp_e2e.py  test_neo4j_e2e.py  test_pgvector_similarity.py  test_postgres_scope.py  test_rest_e2e.py  test_servicenow_e2e.py  test_session_store_e2e.py
tests/unit/: test_adapter_scope.py  test_admin_attestation.py  test_admin_routes.py  test_attestation_payload.py  test_audit_logger.py  test_audit_reader.py  test_broker.py  test_cli.py  test_clips_encoding.py  test_close_idempotency.py  test_config_loader.py  test_fathom_router.py  test_fathom_router_basic.py  test_field_identifier.py  test_module_presence.py  test_operator_allowlist_drift.py  test_otel_spans.py  test_pattern_analyzer.py  test_pgvector_adapter.py  test_postgres_adapter.py  test_rule_packs.py  test_source_registry.py  test_sql_injection_static.py  test_synthesizer.py
(+98 files in other folders)
